# PosiControl

./: .gitignore  start.sh  toServer.sh  wifi.txt
GuiCode/: .directory  DrawLib.cpp  DrawLib.h  MainView.cpp  MainView.h  main.cpp  makefile  program
GuiCodeFor Windows/: GuiCodeFor Windows.vcxproj  main.cpp
MotorModuleSimulator/: CMakeCache.txt  CMakeLists.txt  CommunicationHandler.cpp  CommunicationHandler.h  Controller.cpp  Controller.h  Makefile  MotorModule.cpp  MotorModule.h  MotorModuleSimulator.cpp  MotorModuleSimulator.h  SerialPort.h  cmake_install.cmake  main.cpp
MotorModuleSimulator/RS485/: CommunicationHandler.cpp  CommunicationHandler.h  SerialPort.cpp  SerialPort.h
MotorSimulator/: CMakeLists.txt  Controller.cpp  Controller.h  MainView.cpp  MainView.h  Model.cpp  Model.h  MotorModule.cpp  MotorModule.h  MotorModuleSimulator.cpp  MotorModuleSimulator.h  MotorSimulator.sln  MotorSimulator.vcxproj  MotorSimulator.vcxproj.filters  communication_handler.cpp  communication_handler.h  controller.cpp  controller.h  main.cpp  motor_module.cpp  motor_module.h  motor_module_simulator.cpp  motor_module_simulator.h
MotorSimulator/Controller/: controller.cpp  controller.h
MotorSimulator/Model/: model.cpp  model.h  motor_module.cpp  motor_module.h
MotorSimulator/MotorSimulator/: Controller.h  Model.cpp  MotorSimulator.vcxproj  main.cpp
lib/: readme.txt
pyRs485/: pySetup.sh
pyserver/: db.sqlite3  diagram.plantuml  requirements.txt  start.sh  test.py
test/: a.out  test.cpp
webinterface/: .eslintrc.js  deploy.sh  package-lock.json  package.json
(+35 files in other folders)
